--- a/sdk/api/evaluation-task/delete.mdx
+++ b/sdk/api/evaluation-task/delete.mdx
@@ -5,7 +5,7 @@ description: "Delete a specific evaluation task by its ID."
 
 ## Example
 ```python
-galtea.evaluation_tasks.delete(task_id="YOUR_TASK_ID")
+galtea.evaluation_tasks.delete(evaluation_task_id="YOUR_TASK_ID")
 ```
 
 ## Parameters
