--- a/sdk/api/evaluation-task/get.mdx
+++ b/sdk/api/evaluation-task/get.mdx
@@ -8,7 +8,7 @@ Returns an EvaluationTask object for the given task ID.
 
 ## Example
 ```python
-evaluation_task = galtea.evaluation_tasks.get(task_id="YOUR_TASK_ID")
+evaluation_task = galtea.evaluation_tasks.get(evaluation_task_id="YOUR_TASK_ID")
 ```
 
 ## Parameters
