--- a/sdk/api/evaluation/create.mdx
+++ b/sdk/api/evaluation/create.mdx
@@ -4,7 +4,7 @@ description: "Create an evaluation for a test and version."
 ---
 
 ## Returns
-Returns an Evaluation object for the given test and version.
+Returns an Evaluation object for the given test and version, or `None` if an error occurs.
 
 ## Example
 ```python
