--- a/sdk/api/metrics/get.mdx
+++ b/sdk/api/metrics/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific metric by its ID."
 ---
 
 ## Returns
-Returns a Metric object for the given metric ID.
+Returns a MetricType object for the given metric ID.
 
 ## Example
 ```python
