--- a/sdk/api/test-case/delete.mdx
+++ b/sdk/api/test-case/delete.mdx
@@ -12,3 +12,6 @@ galtea.test_cases.delete(test_case_id="YOUR_TEST_ID")
 <ResponseField name="test_case_id" type="string" required>
   The ID of the test case you want to delete.
 </ResponseField>
+
+## Returns
+Returns `True` if deletion was successful, `False` otherwise.
