--- a/sdk/api/test-case/list.mdx
+++ b/sdk/api/test-case/list.mdx
@@ -8,10 +8,20 @@ Returns a list of TestCase objects for the given test.
 
 ## Example
 ```python
+# List all test cases for a test
 test_cases = galtea.test_cases.list(test_id="YOUR_TEST_ID")
+
+# List with pagination
+paginated_test_cases = galtea.test_cases.list(test_id="YOUR_TEST_ID", offset=10, limit=5)
 ```
 
 ## Parameters
 <ResponseField name="test_id" type="string" required>
   The ID of the test you want to get the test cases from.
+</ResponseField>
+<ResponseField name="offset" type="int" optional>
+  The number of test cases to skip before starting to collect the result set.
+</ResponseField>
+<ResponseField name="limit" type="int" optional>
+  The maximum number of test cases to return.
 </ResponseField>
