--- a/sdk/api/test/service.mdx
+++ b/sdk/api/test/service.mdx
@@ -18,3 +18,4 @@ This Service is exposed by the `galtea.tests` object.
 - [Retrieving Test](/sdk/api/test-service/get)
 - [Retrieving Test By Name](/sdk/api/test-service/get-by-name)
 - [Deleting Test](/sdk/api/test-service/delete)
+- [Downloading Test](/sdk/api/test-service/download)
