--- a/sdk/api/evaluation-task/create-from-production.mdx
+++ b/sdk/api/evaluation-task/create-from-production.mdx
@@ -4,11 +4,11 @@ description: "Create an evaluation task from real user interactions in productio
 ---
 
 ## Returns
-Returns an EvaluationTask object for the given version and user input.
+Returns a list of EvaluationTask objects for the given version and user input.
 
 ## Example
 ```python
-evaluation_task = galtea.evaluation_tasks.create_from_production(
+evaluation_tasks = galtea.evaluation_tasks.create_from_production(
     version_id="YOUR_VERSION_ID",
     metrics=["accuracy_v1", "coherence-v1"],
     input=user_query,
@@ -49,22 +49,22 @@ evaluation_task = galtea.evaluation_tasks.create_from_production(
 <ResponseField name="actual_output" type="string" required>
   The actual output produced by the product.
 </ResponseField>
-<ResponseField name="context" type="string">
+<ResponseField name="context" type="string" optional>
   The context that was used to generate the actual output.
 </ResponseField>
-<ResponseField name="retrieval_context" type="string">
+<ResponseField name="retrieval_context" type="string" optional>
   The context retrieved by your RAG system that was used to generate the actual output.
 </ResponseField>
-<ResponseField name="conversation_turns" type="list[dict[string, string]]">
+<ResponseField name="conversation_turns" type="list[dict[string, string]]" optional>
   A list of previous conversation turns, each a dictionary with "input" and "actual_output" keys. This is used for evaluating conversational AI.
   Example: `[{"input": "Hello", "actual_output": "Hi there!"}, {"input": "How are you?", "actual_output": "I'm doing well, thanks!"}]`
 </ResponseField>
-<ResponseField name="latency" type="float">
+<ResponseField name="latency" type="float" optional>
   Time lapsed (in ms) from the moment the request was sent to the LLM to the moment the response was received.
 </ResponseField>
-<ResponseField name="usage_info" type="dict[str, float]">
-  The token count information of the LLM call. Keys must be snake_case.
+<ResponseField name="usage_info" type="dict[str, float]" optional>
+  Token usage information for the LLM call. Keys must be snake_case. Possible keys: `input_tokens`, `output_tokens`, `cache_read_input_tokens`.
 </ResponseField>
-<ResponseField name="cost_info" type="dict[str, float]">
-  The costs of the input and output tokens of the LLM call. Keys must be snake_case.
+<ResponseField name="cost_info" type="dict[str, float]" optional>
+  Cost information for the LLM call. Keys must be snake_case. Possible keys: `cost_per_input_token`, `cost_per_output_token`, `cost_per_cache_read_input_token`.
 </ResponseField>
