--- a/sdk/api/metrics/get-by-name.mdx
+++ b/sdk/api/metrics/get-by-name.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific metric by its name."
 ---
 
 ## Returns
-Returns a Metric object for the given metric name.
+Returns a MetricType object for the given metric name.
 
 ## Example
 ```python
