--- a/sdk/api/metrics/list.mdx
+++ b/sdk/api/metrics/list.mdx
@@ -4,7 +4,7 @@ description: "List all metric types."
 ---
 
 ## Returns
-Returns a list of Metric objects.
+Returns a list of MetricType objects.
 
 ## Example
 ```python
