--- a/sdk/api/test-case/create.mdx
+++ b/sdk/api/test-case/create.mdx
@@ -24,12 +24,12 @@ test_case = galtea.test_cases.create(
 <ResponseField name="input" type="string" required>
   The input for the test case. This is the question or prompt you want to send to your model for a later evaluation.
 </ResponseField>
-<ResponseField name="expected_output" type="string">
+<ResponseField name="expected_output" type="string" optional>
   The expected output for the input given. This is the correct answer or response you want to evaluate against.
 </ResponseField>
-<ResponseField name="context" type="string">
+<ResponseField name="context" type="string" optional>
   The context for the test case. This is the additional information that can help the model generate the expected output.
 </ResponseField>
-<ResponseField name="tag" type="string">
+<ResponseField name="tag" type="string" optional>
   An optional tag to categorize or label the test case (e.g., "general_knowledge", "edge_cases", "customer_query").
 </ResponseField>
