--- a/sdk/api/version/get-by-name.mdx
+++ b/sdk/api/version/get-by-name.mdx
@@ -8,13 +8,13 @@ Returns a Version object for the given product and version name.
 
 ## Example
 ```python
-galtea.versions.get_by_name(product_id="YOUR_PRODUCT_ID", name="YOUR_VERSION_NAME")
+galtea.versions.get_by_name(product_id="YOUR_PRODUCT_ID", version_name="YOUR_VERSION_NAME")
 ```
 
 ## Parameters
 <ResponseField name="product_id" type="string" required>
   The ID of the product for which you want to retrieve the version.
 </ResponseField>
-<ResponseField name="name" type="string" required>
+<ResponseField name="version_name" type="string" required>
   The name of the version you want to retrieve.
 </ResponseField>
