--- a/sdk/api/evaluation/service.mdx
+++ b/sdk/api/evaluation/service.mdx
@@ -11,7 +11,7 @@ This Service is exposed by the `galtea.evaluations` object.
 </Info>
 
 ## SDK Methods
-- [Create Evaluation](/sdk/api/evaluation-service/create)
-- [Listing Evaluations](/sdk/api/evaluation-service/list)
-- [Retrieving Evaluation](/sdk/api/evaluation-service/get)
-- [Deleting Evaluation](/sdk/api/evaluation-service/delete)
+- [Create Evaluation](/sdk/api/evaluation/create)
+- [Listing Evaluations](/sdk/api/evaluation/list)
+- [Retrieving Evaluation](/sdk/api/evaluation/get)
+- [Deleting Evaluation](/sdk/api/evaluation/delete)
