--- a/sdk/api/metrics/service.mdx
+++ b/sdk/api/metrics/service.mdx
@@ -11,8 +11,8 @@ This Service is exposed by the `galtea.metrics` object.
 </Info>
 
 ## SDK Methods
-- [Create Metric](/sdk/api/metrics-service/create)
-- [Listing Metrics](/sdk/api/metrics-service/list)
-- [Retrieving Metric](/sdk/api/metrics-service/get)
-- [Retrieving Metric By Name](/sdk/api/metrics-service/get-by-name)
-- [Deleting Metric](/sdk/api/metrics-service/delete)
+- [Create Metric](/sdk/api/metrics/create)
+- [Listing Metrics](/sdk/api/metrics/list)
+- [Retrieving Metric](/sdk/api/metrics/get)
+- [Retrieving Metric By Name](/sdk/api/metrics/get-by-name)
+- [Deleting Metric](/sdk/api/metrics/delete)
