--- a/sdk/api/test-case/service.mdx
+++ b/sdk/api/test-case/service.mdx
@@ -11,7 +11,7 @@ This Service is exposed by the `galtea.test_cases` object.
 </Info>
 
 ## SDK Methods
-- [Create Test Case](/sdk/api/test-case-service/create)
-- [Listing Test Cases](/sdk/api/test-case-service/list)
-- [Retrieving Test Case](/sdk/api/test-case-service/get)
-- [Deleting Test Case](/sdk/api/test-case-service/delete)
+- [Create Test Case](/sdk/api/test-case/create)
+- [Listing Test Cases](/sdk/api/test-case/list)
+- [Retrieving Test Case](/sdk/api/test-case/get)
+- [Deleting Test Case](/sdk/api/test-case/delete)
