--- a/sdk/api/test/service.mdx
+++ b/sdk/api/test/service.mdx
@@ -11,9 +11,9 @@ This Service is exposed by the `galtea.tests` object.
 </Info>
 
 ## SDK Methods
-- [Create Test](/sdk/api/test-service/create)
-- [Listing Tests](/sdk/api/test-service/list)
-- [Retrieving Test](/sdk/api/test-service/get)
-- [Retrieving Test By Name](/sdk/api/test-service/get-by-name)
-- [Deleting Test](/sdk/api/test-service/delete)
-- [Downloading Test](/sdk/api/test-service/download)
+- [Create Test](/sdk/api/test/create)
+- [Listing Tests](/sdk/api/test/list)
+- [Retrieving Test](/sdk/api/test/get)
+- [Retrieving Test By Name](/sdk/api/test/get-by-name)
+- [Deleting Test](/sdk/api/test/delete)
+- [Downloading Test](/sdk/api/test/download)
