--- a/sdk/api/version/service.mdx
+++ b/sdk/api/version/service.mdx
@@ -11,8 +11,8 @@ This Service is exposed by the `galtea.versions` object.
 </Info>
 
 ## SDK Methods
-- [Create Version](/sdk/api/version-service/create)
-- [Listing Versions](/sdk/api/version-service/list)
-- [Retrieving Version](/sdk/api/version-service/get)
-- [Retrieving Version By Name](/sdk/api/version-service/get-by-name)
-- [Deleting Version](/sdk/api/version-service/delete)
+- [Create Version](/sdk/api/version/create)
+- [Listing Versions](/sdk/api/version/list)
+- [Retrieving Version](/sdk/api/version/get)
+- [Retrieving Version By Name](/sdk/api/version/get-by-name)
+- [Deleting Version](/sdk/api/version/delete)
