--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -21,7 +21,7 @@ You can create quality tests in Galtea through two methods:
       <Step title="Configure the test">
         Select *Quality* as the test type and *Generated* as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test-service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
+          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Generate the test">
@@ -37,7 +37,7 @@ You can create quality tests in Galtea through two methods:
       <Step title="Configure the test">
         Select "Quality" as the test type and "Uploaded" as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test-service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
+          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea platform](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Upload your test file">
@@ -109,7 +109,7 @@ Here are examples of the content and its creation-document structure:
 </AccordionGroup>
 
 <Note>
-  This structure is the required by Galtea in order to automatically generate the [test cases](/concepts/product/test/case) for your [test](/concepts/product/test). If that format is not provided, you can still [manually create the test cases](/sdk/api/test-case-service#create-test-case).
+  This structure is the required by Galtea in order to automatically generate the [test cases](/concepts/product/test/case) for your [test](/concepts/product/test). If that format is not provided, you can still [manually create the test cases](/sdk/api/test-case/service#create-test-case).
 </Note>
 
 <Info>
