--- a/snippets/cards/sdk-evaluation-service-card.mdx
+++ b/snippets/cards/sdk-evaluation-service-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Evaluation Service SDK" icon="badge-check" iconType="solid" href="/sdk/api/evaluation/service">
-  SDK methods for managing evaluations
+  Manage evaluations using the Python SDK
 </Card>
