--- a/snippets/cards/sdk-test-case-service-card.mdx
+++ b/snippets/cards/sdk-test-case-service-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Test Case Service SDK" icon="clipboard-list" iconType="solid" href="/sdk/api/test-case/service">
-  SDK methods for managing test cases
+  Manage test cases using the Python SDK
 </Card>
