--- a/snippets/cards/sdk-version-service-card.mdx
+++ b/snippets/cards/sdk-version-service-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Version Service SDK" icon="swatchbook" iconType="solid" href="/sdk/api/version/service">
-  SDK methods for managing product versions
+  Manage product versions using the Python SDK
 </Card>
