--- a/concepts/product/version.mdx
+++ b/concepts/product/version.mdx
@@ -5,11 +5,13 @@ icon: "swatchbook"
 iconType: "solid"
 ---
 
-import SDKVersionServiceCard from '/snippets/cards/sdk-version/service-card.mdx';
+import SDKVersionServiceCard from '/snippets/cards/sdk-version-service-card.mdx';
 
 ## What is a Version?
 
 A version in Galtea represents a specific iteration of a [product](/concepts/product). Versions allow you to track changes to your product over time and compare different implementations against the same tests.
+
+You can **create**, view and manage your versions on the [Galtea dashboard](https://platform.galtea.ai/) or programmatically using the [Galtea SDK](/sdk/api/version/service).
 
 ## Comparing Versions
 
@@ -37,8 +39,6 @@ The Galtea SDK allows you to create, view, and manage versions programmatically.
 
 ## Version Properties
 
-When creating a version in Galtea, you'll need to provide the following information:
-
 <ResponseField name="Version Name" type="Text" required>
   The name of the version. **Example**: "v1.2.0" or "GPT-4 Implementation"
 </ResponseField>
@@ -47,7 +47,7 @@ When creating a version in Galtea, you'll need to provide the following informat
   A description of the version, typically highlighting what makes it different from other versions. **Example**: "Improved summarization algorithm with better fact retention"
 </ResponseField>
 
-<ResponseField name="Model" type="ID (text)" required>
+<ResponseField name="Model" type="Model" required>
   The AI [Model](/concepts/model) used by this version. This is used for cost tracking and associating the version with a specific LLM's pricing and tokenization characteristics.
 
   This is used to calculate the cost of the inference for the version during [evaluation tasks](/concepts/product/evaluation/task).
