--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -17,11 +17,9 @@ Metric types in Galtea define the specific criteria and methods used to evaluate
   Metric types are organization-wide and can be reused across multiple products.
 </Info>
 
-You can view and manage your metric types on the [Galtea dashboard](https://platform.galtea.ai/metrics).
+You can **create**, view and manage your metric types on the [Galtea dashboard](https://platform.galtea.ai/) or programmatically using the [Galtea SDK](/sdk/api/metrics/service).
 
 ## Metric Type Properties
-
-When creating a metric type in Galtea, you'll need to provide the following information:
 
 <ResponseField name="Name" type="Text" required>
   The name of the metric type. **Example**: "Factual Accuracy"
