--- a/sdk/api/evaluation-task/create-from-production.mdx
+++ b/sdk/api/evaluation-task/create-from-production.mdx
@@ -3,6 +3,9 @@ title: 'Create Evaluation Task from Production'
 description: "Create an evaluation task from real user interactions in production."
 ---
 
+Galtea SDK also supports creating evaluation tasks directly from your production environment using the `create_from_production` method. 
+This is useful for ongoing monitoring and analysis of real user interactions even using past interactions.
+
 ## Returns
 Returns a list of EvaluationTask objects for the given version and user input.
 
