--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -35,27 +35,27 @@ The Galtea SDK allows you to create, view, and manage test cases programmaticall
 
 ## Test Case Properties
 
-<ResponseField name="Input" type="string" required>
+<ResponseField name="Input" type="Text" required>
   The input data used for inference on the LLM product's version. This is the question or prompt that will be sent to your AI model. **Example**: "What is the operating system of the Samsung Galaxy A8?"
 </ResponseField>
 
-<ResponseField name="Expected Output" type="string">
+<ResponseField name="Expected Output" type="Text">
   The expected output for the evaluation task. This represents the ideal response you want your AI model to provide. **Example**: "The operating system of the Samsung Galaxy A8 is Android 8.1."
 </ResponseField>
 
-<ResponseField name="Context" type="string">
+<ResponseField name="Context" type="Text">
   Test case-specific context that provides context to the model. It can be the past conversation or any other relevant information. Do not mistake for the system prompt/few-shot examples; those should be defined in the product's [version](/concepts/product/version) unless they change on an interaction basis.
 </ResponseField>
 
-<ResponseField name="Tag" type="string">
+<ResponseField name="Tag" type="Text">
   A label that helps categorize the test case. This helps in organizing and filtering test cases within your test suite (e.g., "specification", "factual_knowledge", "edge_case").
 </ResponseField>
 
-<ResponseField name="Source" type="string">
+<ResponseField name="Source" type="Text">
   The original source text used to create the test case. This can be helpful for tracing where test cases originated from, especially when generating test cases from documentation or other reference materials.
 </ResponseField>
 
-<ResponseField name="Conversation Turns" type="List[Dict[str, str]]">
+<ResponseField name="Conversation Turns" type="List[Dict[Text, Text]]">
   For conversational AI, this field can store a list of previous turns in the conversation. Each turn is a dictionary with "input" and "actual_output" keys. This data is primarily used when evaluating conversational metrics.
   Example: `[{"input": "What's the weather like?", "actual_output": "It's sunny today!"}, {"input": "Great, any recommendations for outdoor activities?", "actual_output": None}]`
 </ResponseField>
